--- a/Mikus_40K/package.json
+++ b/Mikus_40K/package.json
@@ -19,6 +19,7 @@
     "glob": "^11.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "rimraf": "^6.0.1",
     "uuid": "^11.0.3"
