--- a/Mikus_40K/package.json
+++ b/Mikus_40K/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.7.1",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@iconify/react": "^5.0.2",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
